--- a/src/gui/loadtester/src/app/app.component.html
+++ b/src/gui/loadtester/src/app/app.component.html
@@ -6,7 +6,7 @@
     <mat-sidenav mode="side" opened>
         <app-sidebar></app-sidebar>
     </mat-sidenav>
-    <mat-sidenav-content>Main</mat-sidenav-content>
+    <mat-sidenav-content>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
 </mat-sidenav-container>
-
-<router-outlet></router-outlet>
