--- a/src/gui/loadtester/src/app/sidebar/sidebar.component.html
+++ b/src/gui/loadtester/src/app/sidebar/sidebar.component.html
@@ -1,1 +1,10 @@
-<p>sidebar works!</p>
+<mat-nav-list>
+    <a mat-list-item>
+        <mat-icon matListIcon color="primary">create</mat-icon>
+        Create Scenario
+    </a>
+    <a mat-list-item>
+        <mat-icon matListIcon color="primary">cached</mat-icon>
+        Open Saved Scenarios
+    </a>
+</mat-nav-list>
