--- a/src/gui/loadtester/src/app/sidebar/sidebar.component.html
+++ b/src/gui/loadtester/src/app/sidebar/sidebar.component.html
@@ -5,6 +5,6 @@
     </a>
     <a mat-list-item>
         <mat-icon matListIcon color="primary">cached</mat-icon>
-        Open Saved Scenarios
+        Saved Scenarios
     </a>
 </mat-nav-list>
