--- a/src/gui/loadtester/src/app/sidebar/sidebar.component.html
+++ b/src/gui/loadtester/src/app/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <mat-nav-list>
-    <a mat-list-item>
+    <a mat-list-item routerLink="/create">
         <mat-icon matListIcon color="primary">create</mat-icon>
         Create Scenario
     </a>
-    <a mat-list-item>
+    <a mat-list-item routerLink="/saved">
         <mat-icon matListIcon color="primary">cached</mat-icon>
         Saved Scenarios
     </a>
