scenario card details

--- a/src/gui/loadtester/src/app/sidebar/sidebar.component.html
+++ b/src/gui/loadtester/src/app/sidebar/sidebar.component.html
@@ -3,6 +3,10 @@
         <mat-icon matListIcon color="primary">create</mat-icon>
         Create Scenario
     </a>
+    <a mat-list-item routerLink="/display">
+        <mat-icon matListIcon color="primary">directions_run</mat-icon>
+        Running Scenario
+    </a>
     <a mat-list-item routerLink="/saved">
         <mat-icon matListIcon color="primary">cached</mat-icon>
         Saved Scenarios
