displayed platforms stats

--- a/src/gui/loadtester/src/app/sidebar/sidebar.component.html
+++ b/src/gui/loadtester/src/app/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <mat-icon matListIcon color="primary">create</mat-icon>
         Create Scenario
     </a>
-    <a mat-list-item routerLink="/display">
+    <a mat-list-item routerLink="/running">
         <mat-icon matListIcon color="primary">directions_run</mat-icon>
         Running Scenario
     </a>
