--- a/src/gui/loadtester/src/app/display-scenario/display-scenario.component.html
+++ b/src/gui/loadtester/src/app/display-scenario/display-scenario.component.html
@@ -1,2 +1,4 @@
-<app-scenario-card></app-scenario-card>
-<app-scenario-plats-stats></app-scenario-plats-stats>
+<div class="container">
+    <app-scenario-card></app-scenario-card>
+    <app-scenario-plats-stats></app-scenario-plats-stats>
+</div>
