--- a/src/gui/loadtester/src/app/saved-scenarios/scenario-description/scenario-description.component.html
+++ b/src/gui/loadtester/src/app/saved-scenarios/scenario-description/scenario-description.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<mat-card (click)="clicked.emit()" class="clickable">
     <mat-card-header>
         <div mat-card-avatar class="avatar-image"></div>
         <mat-card-title>{{description.id}}</mat-card-title>
