--- a/src/gui/loadtester/src/app/saved-scenarios/scenario-description/scenario-description.component.css
+++ b/src/gui/loadtester/src/app/saved-scenarios/scenario-description/scenario-description.component.css
@@ -1,7 +1,8 @@
 mat-card {
-    max-width: 400px;
+    min-width: 300px;
     margin-left: 10px;
     margin-top: 10px;
+    user-select: none;
 }
 
 .avatar-image {
@@ -17,6 +18,6 @@ mat-card {
     justify-content: space-between;
 }
 
-.container div:first-child {
-    user-select: none;
+.clickable {
+    cursor: pointer;
 }
