--- a/src/gui/loadtester/src/app/display-scenario/display-scenario.component.html
+++ b/src/gui/loadtester/src/app/display-scenario/display-scenario.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-    <app-scenario-card></app-scenario-card>
-    <app-scenario-plats-stats></app-scenario-plats-stats>
+    <app-scenario-card [scenario]="scenario" [type]="type"></app-scenario-card>
+    <app-scenario-plats-stats [scenario]="scenario"></app-scenario-plats-stats>
 </div>
