--- a/src/gui/loadtester/src/app/display-scenario/scenario-card/scenario-card.component.css
+++ b/src/gui/loadtester/src/app/display-scenario/scenario-card/scenario-card.component.css
@@ -1,8 +1,7 @@
 mat-card {
     box-sizing: border-box;
     width: 100%;
-    padding-left: 10px;
-    padding-top: 10px;
+    margin-bottom: 5px;
 }
 
 .avatar-image {
