aligned scenario card

--- a/src/gui/loadtester/src/app/display-scenario/scenario-card/scenario-card.component.css
+++ b/src/gui/loadtester/src/app/display-scenario/scenario-card/scenario-card.component.css
@@ -11,7 +11,11 @@ mat-card {
     background-size: cover;
 }
 
-.item-container mat-progress-bar {
-    width: 200px;
-    box-sizing: border-box;
+.item-container {
+    width: 100%;
+}
+
+.content {
+    display: flex;
+    justify-content: space-between;
 }
